(content): adde terms & privacy pages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container text-center text-sm-start ms-lg-4">
             <div class="row">
                 <div class="col-lg-8">
-                    <h1 class="display-4 fw-bold mb-4">Fleet Innovation & Industrial Solutions for Africa’s Growth</h1>
+                    <h1 class="display-4 fw-bold mb-4 text-orange">Fleet Innovation & Industrial Solutions for Africa’s Growth</h1>
                     <button class="btn btn-hero-btn me-3">Request a free consultation</button>
                     <button class="btn btn-outline-light" style="padding:12px !important;">Contact us</button>
                 </div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-12 col-lg-7 mt-2">
                     <p class="lead mb-4">We deliver integrated solutions across transport,  manufacturing, and utilities</p>
-                    <p class="lead mb-4">Through our Fleet Management and Industrial Management divisions, we provide technology-driven systems, asset management, compliance, and sustainable operations. Anchored on consultancy,  project management, and capacity building, we equip organizations with the tools, skills, and strategies to drive  efficiency, innovation, and growth</p>
+                    <p class="lead mb-4 text-justify">Through our Fleet Management and Industrial Management divisions, we provide technology-driven systems, asset management, compliance, and sustainable operations. Anchored on consultancy,  project management, and capacity building, we equip organizations with the tools, skills, and strategies to drive  efficiency, innovation, and growth</p>
                     <p class="lead mb-4">Trusted by corporates, government agencies, and NGOs, we continue to advance  sustainable performance across Africa</p>
                 </div>
             </div>
@@ -307,7 +307,7 @@
     <section class="business-approach-section container py-5 my-lg-5">
         <div class="row">
             <div class="col-12 col-md-6">
-                <h3 class="h3 pt-3 pb-1 ps-5 ps-md-1 text-dark">Our Achievements & <span>Projects Over The Years </span> </h3>
+                <h3 class="h3 pt-3 pb-1 ps-5 ps-md-1 text-dark">Our Achievements</h3>
             </div>
             <div class="col-12 col-md-6 p-2 px-5">
                 <p class="fs-6 feature-tab-2-p text-dark">Showcasing a proven record of excellence, innovation, and impact through successful projects and achievements that drive measurable growth and success</p>
@@ -336,12 +336,6 @@
             </div>
             <div class="col-lg-4 card border-0 mb-4">
                 <div class="content-col py-3 px-4 shadow-sm rounded-3">
-                    <p class="fs-6 text-dark">Reduced fleet operating costs for our clients by up to</p>
-                    <h1 class="h1 text-dark"> 20<span class="d-inline-flex align-items-center">%</span> </h1>
-                </div>
-            </div>
-            <div class="col-lg-4 card border-0 mb-4">
-                <div class="content-col py-3 px-4 shadow-sm rounded-3">
                     <p class="fs-5 text-white fw-bold"> Deployed industrial preventive maintenance systems improving uptime</p>
                 </div>
             </div>
@@ -355,7 +349,7 @@
 
     <!-- Achievements section -->
     <section class="team-section container py-5 my-lg-5">
-        <h1 class="h2 text-center py-4">Meet The Leadership Team</h1>
+        <h1 class="h2 text-center py-4">Meet Our Team</h1>
         <div class="row">
 
             <div class="col-12 col-lg-6 mb-4">
@@ -364,7 +358,7 @@
                         <img src="Assets/Images/team/Joseph.png" class="team-img">
                         <div class="content-section flex-grow-1 p-3 pb-2"> 
                             <h3 class="h3 team-name">Joseph Otieno Odie</h3>
-                            <h6 class="h6 team-role">Lead Consultant - Smart Fleet Solutions</h6>
+                            <h6 class="h6 team-role">Chief operating Officer & Lead consultant - Smart Fleet Solutions</h6>
                             <p class="p6 team-content py-2 pb-1">Seasoned Fleet Management and Automotive Engineering professional with over 25 years of proven expertise in managing large-scale transport and fleet operations across East and Southern Africa while working for Local, Regional and global organizations</p>
                         </div>
                     </div>
@@ -386,7 +380,7 @@
                         <img src="Assets/Images/team/Apollo.jpg" class="team-img">
                         <div class="content-section flex-grow-1 p-3 pb-2"> 
                             <h3 class="h3 team-name">Apollo Ogal Wangah</h3>
-                            <h6 class="h6 team-role">Lead consultant-Industrial management support services</h6>
+                            <h6 class="h6 team-role">project Manager & Lead consultant - Industrial management support services</h6>
                             <p class="p6 team-content py-2 pb-1">A seasoned Mechanical Engineer including with over 25 years’ experience in industrial engineering, plant maintenance, and technical sales across the tea, tobacco, and manufacturing sectors</p>
                         </div>
                     </div>
@@ -586,8 +580,8 @@
             <div class="footer-bottom d-flex justify-content-between text-center">
                 <p class="mb-0">© 2025 All rights reserved</p>
                 <div class="d-flex justify-content-center gap-4 mb-2">
-                    <a href="#" style="color: #373636; text-decoration: none;">Terms & Conditions</a>
-                    <a href="#" style="color: #373636; text-decoration: none;">Privacy Policy</a>
+                    <a href="terms-and-conditions.html" style="color: #373636; text-decoration: none;">Terms & Conditions</a>
+                    <a href="privacy-policy.html" style="color: #373636; text-decoration: none;">Privacy Policy</a>
                 </div>
             </div>
         </div>
