--- a/About.html
+++ b/About.html
@@ -44,9 +44,9 @@
                         <div class="company-logo me-3">
                            <img src="Assets/Images/Company Logo.png" class="w-100">
                         </div>
-                        <h1 class="mb-0 fw-bold">Fleet Associates Africa Ltd</h1>
+                        <h1 class="mb-0 fw-bold text-orange">Fleet Associates Africa Ltd</h1>
                     </div>
-                    <div class="company-description">
+                    <div class="company-description text-justify">
                         <p>Founded in 2015 by visionary engineers, we deliver integrated solutions across transport, manufacturing, and utilities. Through our <a href="#">Fleet Management</a> and <a href="#">Industrial Management</a> divisions, we provide technology-driven systems, asset management, compliance, and sustainable operations. We equip organizations with the tools, insights, and strategies to drive efficiency, innovation, and growth. Trusted by corporates, government agencies, and NGOs, we continue to advance sustainable performance across Africa.</p>
                     </div>
                 </div>
@@ -244,8 +244,8 @@
             <div class="footer-bottom d-flex justify-content-between text-center">
                 <p class="mb-0">© 2025 All rights reserved</p>
                 <div class="d-flex justify-content-center gap-4 mb-2">
-                    <a href="#" style="color: #373636; text-decoration: none;">Terms & Conditions</a>
-                    <a href="#" style="color: #373636; text-decoration: none;">Privacy Policy</a>
+                    <a href="terms-and-conditions.html" style="color: #373636; text-decoration: none;">Terms & Conditions</a>
+                    <a href="privacy-policy.html" style="color: #373636; text-decoration: none;">Privacy Policy</a>
                 </div>
             </div>
         </div>
