--- a/contact.html
+++ b/contact.html
@@ -163,8 +163,8 @@
             <div class="footer-bottom d-flex justify-content-between text-center">
                 <p class="mb-0">© 2025 All rights reserved</p>
                 <div class="d-flex justify-content-center gap-4 mb-2">
-                    <a href="#" style="color: #373636; text-decoration: none;">Terms & Conditions</a>
-                    <a href="#" style="color: #373636; text-decoration: none;">Privacy Policy</a>
+                    <a href="terms-and-conditions.html style="color: #373636; text-decoration: none;">Terms & Conditions</a>
+                    <a href="privacy-policy.html" style="color: #373636; text-decoration: none;">Privacy Policy</a>
                 </div>
             </div>
         </div>
